--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ a{
 }
 @media(min-width:321px) and (max-width: 425px){
     .heroimage{
-        background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(images/keycut.jpg) no-repeat center;
+        background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(img/keycut.jpg) no-repeat center;
         background-size: cover;
         background-attachment: fixed;
     }    
@@ -236,7 +236,7 @@ a{
 }
 @media(min-width:426px) and (max-width: 768px){
     .heroimage{
-        background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(images/coldBack.jpg) no-repeat center;
+        background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(img/coldBack.jpg) no-repeat center;
         background-size: cover;
         background-attachment: fixed;
         background-position-y: -35px;
