--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ a{
 
 @media(max-width: 320px){
     .heroimage{
-        background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(images/coldBack.jpg) no-repeat center;
+        background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(img/coldBack.jpg) no-repeat center;
         background-size: cover;
         background-attachment: fixed;
     }    
