--- a/css/style3.css
+++ b/css/style3.css
@@ -109,7 +109,7 @@ form .submit{
         margin-left: auto;
         margin-right: auto;
         display: grid;
-        grid-template-columns: auto auto auto auto;
+        grid-template-columns: auto auto auto auto auto;
         list-style: none;
     }
 .social2 li{
