--- a/css/style3.css
+++ b/css/style3.css
@@ -4,7 +4,7 @@
     position: relative;
     height: 100vh;
     overflow: hidden;
-    background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(../../img/closeup.jpg) no-repeat center;
+    background: linear-gradient(rgba(0,0,0,0.3) 5%,rgba(0,0,0,0.8) 80%,rgba(0,0,0, 0.3) 100%), url(https://alexandrosas.github.io/home/img/closeup.jpg) no-repeat center;
     background-size: cover;
     background-attachment: fixed;
     background-position-y: 0px;
@@ -105,9 +105,8 @@ form .submit{
         padding: 0px;
     }
 .social2{
-        width: 60%;
-        margin-left: auto;
-        margin-right: auto;
+        width: 80%;
+        margin: 0 auto;
         display: grid;
         grid-template-columns: auto auto auto auto auto;
         list-style: none;
