--- a/css/style2.css
+++ b/css/style2.css
@@ -135,8 +135,8 @@ html{
 }
 #bcktop{
     position: absolute;
-    bottom: 40px;
-    right:40px;
+    bottom: 1em;
+    right: 1em;
     font-size: 26px;
     width:50px;
     height: 50px;
@@ -155,11 +155,11 @@ html{
     background-color: rgba(255,255,255,0.2);
 }
 
-@media(max-width: 425px){
+@media(max-width: 520px){
     #bcktop{      
-        bottom: 30px;
-        right: 10px;
-        left: 10px;
+        position: absolute;
+        bottom: 1em;
+        right: 1em;
         margin:0 auto;
         font-size: 16px;
         width:40px;
